--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Language support for the Hoon language",
     "version": "0.0.1",
     "publisher": "famousj",
+    "repository": "https://github.com/famousj/hoon-vscode.git",
     "engines": {
         "vscode": "^1.24.0"
     },
