--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "hoon",
     "displayName": "Hoon",
     "description": "Language support for the Hoon language",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "publisher": "urbit",
     "repository": "https://github.com/famousj/hoon-vscode.git",
     "icon": "images/urbit.png",
@@ -74,7 +74,8 @@
         "vscode-languageclient": "^5.2.1"
     },
     "devDependencies": {
-        "@types/node": "^13.7.2",
-        "vscode": "^1.1.35"
+        "@types/node": "^13.13.32",
+        "typescript": "^4.1.2",
+        "vscode": "^1.1.37"
     }
 }
